--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "hapticnova",
   "version": "1.0.0",
@@ -16,8 +17,8 @@
     "postcss": "^8.4.21"
   },
   "devDependencies": {
-    "typescript": "^5.1.3",
     "@types/react": "^18.2.0",
-    "@types/node": "^20.5.6"
+    "@types/node": "^20.5.6",
+    "typescript": "^5.1.3"
   }
 }
